# hh_collector

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  schema.sql  tmp.md
.github/workflows/: ci.yml  lint-test.yml
deploy/: env.vps.example
deploy/systemd/: hhru-daily-backup.service  hhru-daily-backup.timer  hhru-ops-failure-notify@.service  hhru-research-archive.service  hhru-research-archive.timer  hhru-weekly-backup-offsite-cleanup.service  hhru-weekly-backup-offsite-cleanup.timer  hhru-weekly-backup-restore-drill.service  hhru-weekly-backup-restore-drill.timer
docker/: app.Dockerfile  backup.Dockerfile  worker.Dockerfile
docs/architecture/: HLD.md  hld.md  lld.md  mvp-scope.md  repo-structure.md
docs/data/: logical-data-model.md
docs/ops/: archive-analysis-smoke.md  backup-restore-drill.md  collection-recovery-2026-06-23.md  current-readiness.md  current-state-2026-06-23.md  data-corpus-boundary.md  deployment-runbook.md  first-detail-backlog.md  hh-api-collection-policy-draft.md  hh-api-collection-strategy-research-plan.md  hh-api-completeness-implementation-plan.md  hh-api-completeness-policy-note.md  hh-api-policy-v1-next-implementation-steps.md  hh-api-probe-cooldown-driver.md  hh-api-probe-next-night-matrix-plan.md  hh-api-probe-night-driver.md  (+14 more)
migrations/: README  env.py
notebooks/: hh_api_captcha_probe.ipynb  hh_api_probe_cooldown_driver.py  hh_api_probe_harness.py  hh_api_probe_night_driver.py  hh_api_split_dimension_probe.py  research_archive_analysis_smoke.ipynb
(+274 files in other folders)
