[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hhru-platform"
version = "0.1.0"
description = "Stateful hh.ru vacancy data collection platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.12.0,<0.13.0",
]

[project.scripts]
hhru-platform = "hhru_platform.interfaces.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hhru_platform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
packages = ["hhru_platform"]

